try to fix non visible gravatar -> picture in bio

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -69,13 +69,13 @@
 }
 
 .fun {
-    height: 135px;
+    height: 30px;
 }
 
 .amanox {
     position: center;
-    width: 100%;
-    animation-duration: 4s;
+    width: 50%;
+    animation-duration: 3s;
     animation-name: amanox;
     animation-timing-function: ease-out;
     animation-iteration-count: 1;
@@ -83,12 +83,12 @@
   
   @keyframes amanox {
     from {
-      margin-left: 100%;
+      margin-left: 50%;
       width: 10%;
     }
   
     to {
       margin-left: 0%;
-      width: 100%;
+      width: 50%;
     }
   }
